fix broken layout styles

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -18,6 +18,9 @@
 .theme-default-content
   max-width 800px!important
 
+.content__default
+  max-width 800px!important
+
 .navbar
   position: relative
   background transparent
